update website + lidar driver

--- a/remote_ctrl_web/remote.html
+++ b/remote_ctrl_web/remote.html
@@ -53,6 +53,8 @@
         <br>
     </div>
     <footer>
-        <img src="logo-robotique.jpg" alt="Logo du club robotique de l'ENAC" style="width: 200px">
+        <div>
+            <img class="hor_center" src="logo-robotique.jpg" alt="Logo du club robotique de l'ENAC" style="width: 200px">
+        </div>
     </footer>
 </div>
