--- a/remote_ctrl_web/remote.html
+++ b/remote_ctrl_web/remote.html
@@ -25,7 +25,7 @@
                 </tr>
                 <tr>
                     <!--<td>Nb avec la commande/Nb connectés</td>-->
-                    <td id="cmd_status">LIAISON DIRECTE</td> <!-- AVANCER 10/15 -->
+                    <td id="cmd_status">En attente de commande</td> <!-- AVANCER 10/15 -->
                 </tr>
             </table>
         </div>
